# common_communicator

./: HISTORY.md  README.md  build.sh  builder.pro  common_config.pri  communicator.pro  env_for_cross_compile.pri  env_for_cross_compile.sh  run_sample_tcp_client.sh  run_sample_tcp_server.sh  run_sample_udp_client.sh  run_sample_udp_server.sh  run_sample_uds_tcp_client.sh  run_sample_uds_tcp_server.sh  run_sample_uds_udp_client.sh  run_sample_uds_udp_server.sh  sdk_deploy.pri
api/common_api/: CPBigEndian.h  CPLittleEndian.h  CReceiver.h  IAppInf.h
communicator/: communicator.pro  post_proc.pri
communicator/api/common_api/: CPayload.h  CRawMessage.h  Enum_common.h  IAppInf.h  IProtocolInf.h
communicator/api/include/: CReceiver.h  Enum_common.h  IAliasSearcher.h
communicator/api/src/: CPayload.cpp  IAliasPVD.cpp  IAliasSearcher.cpp  ICommunicator.cpp  IProtocolInf.cpp
communicator/config/: desp_BigEndian_protocol.json  desp_UniversalCMD_protocol.json  desp_alias.json  desp_protocol.json
communicator/example/: common.pri  example.pro
communicator/example/common_api/: CAppTest.cpp  CAppTest.h  common_api.pro  main.cpp
communicator/example/sample_client/: CAppTest.cpp  main.cpp  (+1 more)
config/: desp_protocol.json
example/: build.sh  example.pro
example/common_api/: CAppTest.cpp  CAppTest.h  common_api.pro  main.cpp
lib/: assert_kes.h
lib/exception/: CException.h
lib/json/: json_headers.h  json_manipulator.cpp  json_manipulator.h
lib/lock/: shared_mutex_kes.h
lib/logger/: logger.h
lib/pal/: protocol.c  protocol.h
lib/time/: time_kes.cpp
lib/util/: util.cpp  util.h
protocol/: post_proc.pri  pre_proc.pri  protocol.pro
protocol/include/: pal.h
protocol/src/: pal.cpp
test/: run_sample_tcp_client.sh  run_sample_tcp_server.sh  run_sample_udp_client.sh  run_sample_udp_server.sh
test/gtest/: CMakeLists.txt  version.h.in
test/gtest/src/: main.cpp
test/uds/: run_sample_tcp_client.sh  run_sample_tcp_server.sh  run_sample_udp_client.sh  run_sample_udp_server.sh
(+133 files in other folders)
